Fix responsive design for course list on small mobile screens

--- a/src/main/webapp/course-list/course-list.style.client.css
+++ b/src/main/webapp/course-list/course-list.style.client.css
@@ -98,6 +98,10 @@ hr {
     color: #b9b9b9;
 }
 
+.wbdv-icon-num {
+    min-width: 24px;
+}
+
 #navbarNavDropdown a {
     padding-left: 6px;
 }
